<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_detail_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:layout_below="@id/layout_detail_user">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/btn_back"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintLeft_toRightOf="@id/btn_back"
            app:layout_constraintRight_toLeftOf="@id/btn_favorite"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="180dp"
            app:cardBackgroundColor="@color/white"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/image_content_description" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="180dp"
            app:cardBackgroundColor="@color/white"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_baseline_unfavorite_24"
                android:contentDescription="@string/image_content_description" />

        </androidx.cardview.widget.CardView>

<!--        <ImageView-->
<!--            android:id="@+id/btn_favorite"-->
<!--            android:layout_width="32dp"-->
<!--            android:layout_height="32dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:src="@drawable/ic_baseline_unfavorite_24"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@id/btn_back"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/btn_back"-->
<!--            android:contentDescription="@string/image_content_description" />-->

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_image_github_user"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/github_logo"
            android:transitionName="avatar"
            app:civ_border_color="#FFF"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:maxWidth="300dp"
            android:layout_height="wrap_content"
            android:text="@string/default_text_name_of_github_user"
            app:layout_constraintTop_toBottomOf="@id/civ_image_github_user"
            android:layout_marginTop="20dp"
            style="@style/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_username"
            android:transitionName="name"
            android:text="@string/default_username_of_github_user"
            android:layout_width="wrap_content"
            android:maxWidth="300dp"
            style="@style/description"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/layout_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/layout_following"
            app:layout_constraintTop_toBottomOf="@id/tv_username">

            <ImageView
                android:id="@+id/iv_followers"
                android:src="@drawable/ic_baseline_people_alt_24"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/image"/>

            <TextView
                android:id="@+id/tv_amount_followers"
                android:text="@string/default_followers"
                android:maxWidth="150dp"
                style="@style/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/layout_follower"
            app:layout_constraintTop_toBottomOf="@id/tv_username">

            <ImageView
                android:id="@+id/iv_following"
                android:src="@drawable/ic_baseline_people_alt_24"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/tv_amount_following"
                android:text="@string/default_following"
                android:maxWidth="150dp"
                style="@style/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_following">

            <ImageView
                android:id="@+id/iv_repo"
                android:src="@drawable/ic_baseline_folder_shared_24"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/tv_repo"
                android:text="@string/default_repositories"
                android:maxWidth="150dp"
                style="@style/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_repo">

            <ImageView
                android:id="@+id/iv_location"
                android:src="@drawable/ic_baseline_location_on_24"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/tv_location"
                android:text="@string/default_location"
                android:maxWidth="150dp"
                style="@style/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_location">

            <ImageView
                android:id="@+id/iv_company"
                android:src="@drawable/ic_baseline_home_work_24"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/tv_company"
                android:text="@string/default_company"
                style="@style/description"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_below="@id/layout_detail_user"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@android:color/white"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_below="@id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>